plex/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: plex
  labels:
    app: plex
spec:
  ports:
  - port: 80
    name: web
    targetPort: 32400
  clusterIP: None
  selector:
    app: plex
