plex/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
    name: plex
spec:
    routes:
        - kind: Rule
          match: ENC[AES256_GCM,data:Q+hrOB4ORHnl2xof5RanMIYiiGUr9LuK,iv:BWw6U+489xmMcFSNmHEaoDIY9gZ+qxuv0yI7Xk5HwXc=,tag:d/61sXvUYC33K0Y7M5ltOg==,type:str]
          services:
            - kind: Service
              name: plex
              port: 80
sops:
    kms: []
    gcp_kms: []
    azure_kv: []
    hc_vault: []
    age: []
    lastmodified: "2023-09-11T05:52:16Z"
    mac: ENC[AES256_GCM,data:D4WnjBTWqCUVNzSBkilzZDqn+ZuYQh8NMnXbvRVKH3B6b4I4wIoXNqlC8ITGL+PV2yPBGuhcOEOGKN7rmGl1oYGgWzOZEZgmlmdYep+08UViqIRI8ik3iuyO/yEM0pOk9O08UDcP/rKr2FgWE/MxAINYBGJA47LC64DRnLVR/rI=,iv:mkbE4VoJrLUWx2mN6Jt5I8cSwT/MNzdWooKtJnkRZMA=,tag:TxdnAqKm3/LwyNbILpPAMA==,type:str]
    pgp:
        - created_at: "2023-09-11T05:52:15Z"
          enc: |
            -----BEGIN PGP MESSAGE-----

            hQIMAyyGYy7YCFAQAQ//Tp9XNAdT0ftEnQQ2J7Anu5OhvAB8lKAXIv1CA365n3EN
[...]
            LKg3bQTtvZQi
            =WZpe
            -----END PGP MESSAGE-----
          fp: 75C3F62D6A9AA2165875F5C680A364E41D3C47AF
    encrypted_regex: ^(match)$
    version: 3.7.3
